; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_notes.c_copy_obj_to_fd.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_notes.c_copy_obj_to_fd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.object_id*)* @copy_obj_to_fd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @copy_obj_to_fd(i32 %0, %struct.object_id* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.object_id*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.object_id* %1, %struct.object_id** %4, align 8
  %8 = load %struct.object_id*, %struct.object_id** %4, align 8
  %9 = call i8* @read_object_file(%struct.object_id* %8, i32* %6, i64* %5)
  store i8* %9, i8** %7, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %23

12:                                               ; preds = %2
  %13 = load i64, i64* %5, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %12
  %16 = load i32, i32* %3, align 4
  %17 = load i8*, i8** %7, align 8
  %18 = load i64, i64* %5, align 8
  %19 = call i32 @write_or_die(i32 %16, i8* %17, i64 %18)
  br label %20

20:                                               ; preds = %15, %12
  %21 = load i8*, i8** %7, align 8
  %22 = call i32 @free(i8* %21)
  br label %23

23:                                               ; preds = %20, %2
  ret void
}

declare dso_local i8* @read_object_file(%struct.object_id*, i32*, i64*) #1

declare dso_local i32 @write_or_die(i32, i8*, i64) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
